--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "@stripe/stripe-js": "^1.12.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -13,8 +14,10 @@
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-flip-move": "^3.0.4",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-slideshow-image": "^3.4.3",
     "styled-components": "^5.2.1",
     "styled-icons": "^10.23.0",
     "uuid": "^8.3.2",
